--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,20 +1,19 @@
 {
-  "name": "CHANGE THIS : Extension boilerplate",
+  "name": "Explore california",
   "version": "0.0.1",
   "manifest_version": 2,
-  "description": "This extension was created with the awesome extensionizr.com",
-  "homepage_url": "http://extensionizr.com",
+  "description": "Start exploring california",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-"content_security_policy": "script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js; object-src 'self'",
+"content_security_policy": "script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js; object-src 'self'",
   "default_locale": "en",
   "chrome_url_overrides": {
     "newtab": "src/override/override.html"
   },
   "permissions": [
-"https://localhost/PhpstormProjects/api.php/Orders"
+"https://localhost/PhpstormProjects/explore_california_api.php/tours"
   ]
 }
